--- a/uc1/конспекты.md
+++ b/uc1/конспекты.md
@@ -18,8 +18,14 @@ description: Добавление таблицы для справочника (
 
 ---
 name: 17.Документы - Заказ клиента
-description: 
+description: Использование документов. Использование определяемых типов. Добавление заказов клиентов в прикладном решении. 
 
 Подробнее
+Создание документа "ЗаказКлиента". Добавление не стандартных реквизитов "Покупатель", "Тип", "Договор".
+Для настройки связи параметров выбора или отбора поля с реквизитом перейтиСвойства реквизита "Договор" -> Представление -> Связи параметров выбора. Выбрать отбор по полю Владелец из реквизита Покупатель.
+Добавление двух табличных частей: "Товары" и "Услуги". Добавление необходимых полей (реквизитов) в таблицы, внимательно отнестись к типам.
+Добавление Определяемого типа "ДенежныеСредства" (число, длина 15, точность 2, неотрицательное).
+Настройка фильтрации для Товаров и Услуг: Представление -> Параметры выбора: Имя: Отбор.ВидНоменклатуры; Значения: <ПеречислениеСсылка.ВидыНоменклатуры> -> Товар (потом Услуга для услуг)
+
 
 ---
