--- a/uc1/термины.md
+++ b/uc1/термины.md
@@ -15,3 +15,10 @@ properties:
 Например, справочник Сотрудники может иметь табличную часть Состав семьи. Состав этой информации одинаков: ФИО, степень родства. Но количество членов семьи у разных сотрудников может быть разным.
 
 ---
+# Определяемый тип
+
+URL: https://its.1c.ru/db/v8323doc/bookmark/dev/ti000000236
+description: Определяемые типы предназначены для определения типов данных, которые описывают часто используемые сущности или с высокой степенью вероятности могут изменяться при внедрении прикладного решения. Они позволяют многократно использовать описываемый тип или набор типов без уточнения состава в различных местах конфигурации (в реквизитах, свойствах объектах, форм и т.п.).
+properties: 
+
+---
