--- a/uc1/термины.md
+++ b/uc1/термины.md
@@ -22,3 +22,9 @@ description: Определяемые типы предназначены для
 properties: 
 
 ---
+# Области
+
+URL: https://v8.1c.ru/platforma/redaktor-teksta-i-modulya/
+description: Разработчик может выделять произвольные области текста, группировать и сворачивать их подобно тому, как сворачиваются инструкции циклов, условий, процедур и функций. Каждой области текста, которую выделяет разработчик, он может дать собственное имя. Это позволяет простым и понятным образом выделять части модуля, имеющие сходный смысл.
+properties: #Область <НазваниеОбласти> и #КонецОбласти
+
